--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </a>
         </div>
         <!--Right Col-->
-        <div class="w-full md:w-3/5 py-6 text-center">
+        <div class="w-full md:w-3/5 py-6 text-center mb-4">
             <img class="w-full md:w-4/5 z-50 rounded-2xl" src="img/hero.png"/>
         </div>
     </div>
@@ -126,7 +126,11 @@
         <div class="w-full mb-4">
             <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
         </div>
+
         <div class="flex flex-wrap">
+            <div class="w-full sm:w-1/2 md:p-6 pb-0">
+                <img src="img/website.png" class="w-full sm:h-64 mx-auto" alt="Website"/>
+            </div>
             <div class="w-5/6 sm:w-1/2 p-6">
                 <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
                     「網站」吸引教授眼球
@@ -137,11 +141,9 @@
                     <br/>
                 </p>
             </div>
-            <div class="w-full sm:w-1/2 p-6">
-                <img src="img/website.png" class="w-full sm:h-64 mx-auto" alt="Website"/>
-            </div>
         </div>
-        <div class="flex flex-wrap flex-col-reverse sm:flex-row">
+        <!--
+        <div class="flex flex-wrap md:flex-col-reverse sm:flex-row">
             <div class="w-full sm:w-1/2 p-6 mt-6">
 
             </div>
@@ -161,12 +163,12 @@
                     </p>
                 </div>
             </div>
-        </div>
-        <div class="flex flex-wrap flex-col-reverse sm:flex-row">
-            <div class="w-full sm:w-1/2 p-6 mt-6">
+        </div>-->
+        <div class="flex flex-wrap md:flex-row-reverse">
+            <div class="w-full sm:w-1/2 md:mt-6 md:p-6 pb-0">
                 <img class="w-5/6 sm:h-64 mx-auto" src="img/pay.png" alt="可負擔的價格"/>
             </div>
-            <div class="w-full sm:w-1/2 p-6 mt-6">
+            <div class="w-full sm:w-1/2 p-6">
                 <div class="align-middle">
                     <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
                         可負擔的價格
