--- a/index.html
+++ b/index.html
@@ -121,8 +121,11 @@
             <h1 class="my-4 text-5xl font-bold leading-tight">
                 創造你獨一無二的學習歷程
             </h1>
+            <p class="leading-normal text-2xl">
+                <span class="font-bold">無門檻</span> 專業網站開發、資安教學
+            </p>
             <p class="leading-normal text-2xl mb-8">
-                <span class="font-bold">０基礎</span> 專業網站開發教學
+                三天從 <span class="font-bold text-gray-300">０基礎</span> 到 <span class="font-bold text-yellow-400">精通</span>
             </p>
             <a
                     href="#pricing"
@@ -169,14 +172,14 @@
 
         <div class="flex flex-wrap">
             <div class="w-full sm:w-1/2 md:p-6 pb-0 mx-2 md:m-0 border-2 border-black-200 rounded-xl">
-                <img src="img/website.png" class="w-full sm:h-64 mx-auto" alt="Website"/>
+                <img src="img/website.png" class="w-auto sm:h-64 mx-auto" alt="Website"/>
             </div>
             <div class="w-5/6 sm:w-1/2 p-6">
                 <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                    「網站」吸引教授眼球
+                    「網站」才能吸引教授眼球
                 </h3>
                 <p class="text-gray-600 mb-8">
-                    不同於其他營隊的拖拉網站或現成網頁教學，Web開發挑戰營讓0基礎的你學會真實的網站開發
+                    我們所教的不是拖拉式建構網頁或Wordpress，而是貨真價實的Web開發技術，Web開發挑戰營讓0基礎的你也能學會對你升學真正有用的網站開發
                     <br/>
                     <br/>
                 </p>
@@ -219,6 +222,22 @@
                         <br/>
                     </p>
                 </div>
+            </div>
+        </div>
+
+        <div class="flex flex-wrap pt-6">
+            <div class="w-full sm:w-1/2 md:p-6 pb-0 mx-2 md:m-0 border-2 border-black-200 rounded-xl">
+                <img src="img/teacher.png" class="w-auto h-64 mx-auto" alt="資安教學、網管教學"/>
+            </div>
+            <div class="w-5/6 sm:w-1/2 p-6">
+                <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+                    不只有「開發」
+                </h3>
+                <p class="text-gray-600 mb-8">
+                    除了網站開發以外，我們同時教導學生資訊安全、網站部屬及維運概念
+                    <br/>
+                    <br/>
+                </p>
             </div>
         </div>
     </div>
