--- a/index.html
+++ b/index.html
@@ -533,6 +533,12 @@
                 </div>
             </div>
         </div>
+
+        <div class="flex flex-col justify-center align-center">
+            <div class="flex w-5/6 mx-auto mb-3 text-lg cursor-pointer">
+                報名前請參閱&nbsp;<a href="terms.html" target="_blank" class="text-blue-500 underline">營隊須知</a>
+            </div>
+        </div>
     </div>
 </section>
 <!-- Change the colour #f8fafc to match the previous section colour -->
@@ -598,10 +604,10 @@
                         <a href="https://aplusplus.education?utm_source=WebCamp&utm_medium=website&utm_campaign=website"
                            class="no-underline hover:underline text-gray-800 hover:text-pink-500" target="_blank">A++程式設計</a>
                     </li>
-                    <!--
                     <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                        <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">About Us</a>
+                        <a href="terms.html" class="no-underline hover:underline text-gray-800 hover:text-pink-500">營隊須知</a>
                     </li>
+                    <!--
                     <li class="mt-2 inline-block mr-2 md:block md:mr-0">
                         <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Contact</a>
                     </li>-->
