--- a/terms.html
+++ b/terms.html
@@ -64,7 +64,8 @@
 <nav id="header" class="fixed w-full z-30 top-0 text-white gradient">
     <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
         <div class="pl-4 flex items-center">
-            <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
+            <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl"
+               href="index.html">
                 <!--Icon from: http://www.potlabicons.com/ -->
                 <svg id="icon-globe" class="h-8 fill-current inline" xmlns="http://www.w3.org/2000/svg"
                      viewBox="0 0 24 24">
@@ -118,7 +119,29 @@
             <div class="w-full p-6">
                 <div class="align-middle">
                     <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                        §1 用餐
+                        §1 營期
+                    </h3>
+                    <p class="text-gray-600 pl-8">
+                        2022 Web開發挑戰營共三梯次
+                        <br/>
+                        各梯次教學內容不會有過多差異，但實作專案會不同，學生也可報名多個梯次來增加自己的作品。<br/>
+                        報名兩個梯次以上者，報名之第二個梯次起可享有7折優惠!
+                    </p>
+                    <ul class="text-gray-600 pl-8 mb-4">
+                        <li class="list-decimal ml-12">
+                            7/1 - 7/3 共三天
+                        </li>
+                        <li class="list-decimal ml-12">
+                            7/4 - 7/6 共三天
+                        </li>
+                        <li class="list-decimal ml-12">
+                            7/9 - 7/12 共三天
+                        </li>
+                    </ul>
+                </div>
+                <div class="align-middle">
+                    <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+                        §2 用餐
                     </h3>
                     <p class="text-gray-600 mb-8 pl-8">
                         不論哪個報名方案，費用皆包括三天的午餐及第一天第二天晚餐費。
@@ -128,7 +151,7 @@
                 </div>
                 <div class="align-middle">
                     <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                        §2 設備
+                        §3 設備
                     </h3>
                     <p class="text-gray-600 mb-8 pl-8">
                         學員需自備: <span class="text-red-500 font-bold">一台筆記型電腦</span>
@@ -139,28 +162,31 @@
                 </div>
                 <div class="align-middle">
                     <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                        §3 服務
+                        §4 服務
                     </h3>
                     <p class="text-gray-600 pl-8">
                         學員費用包含:
+                        <span class="text-sm text-gray-700">*</span>
                     </p>
                     <ul class="text-gray-600 pl-8 mb-4">
                         <li class="list-decimal ml-12">
-                            <span class="text-red-500 font-bold">一個月主機</span><span
-                                class="text-sm text-gray-700">*</span></li>
+                            <span class="text-red-500 font-bold">一個月主機</span>
+                            <span class="text-sm text-gray-700">*</span>
+                        </li>
                         <li class="list-decimal ml-12">
-                            <span class="text-red-500 font-bold">一個月子域名</span><span
-                                class="text-sm text-gray-700">*</span>
+                            <span class="text-red-500 font-bold">一個月子域名</span>
+                            <span class="text-sm text-gray-700">*</span>
                         </li>
                     </ul>
                     <p class="text-gray-600 text-sm mb-8 pl-8">
-                        *1: 倘若學員在營隊一個月以後仍需要使用主機服務，可向主辦方購置<br/>
-                        *2: 倘若學員在營隊一個月以後仍需要使用域名服務，可向主辦方購置<br/>
+                        *1: 若學員報名超過一個梯次，其服務使用時間不會累計，以其報名梯次舉辦時間最後者起計使用效期。<br/>
+                        *2: 倘若學員在營隊一個月以後仍需要使用主機服務，可向主辦方購置。<br/>
+                        *3: 倘若學員在營隊一個月以後仍需要使用域名服務，可向主辦方購置。<br/>
                     </p>
                 </div>
                 <div class="align-middle">
                     <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                        §4 規範
+                        §5 規範
                     </h3>
                     <p class="text-gray-600 pl-8">
                         課程期間學員必須遵守下開行為準則
