--- a/sales.html
+++ b/sales.html
@@ -133,7 +133,8 @@
                     </p>
                     <div class="w-full text-center mb-3">
                         <a class="text-pink-600 no-underline font-bold text-2xl inline-block border-2 p-2 my-2 rounded-xl shadow-xl"
-                           href="index.html">
+                           href="index.html"
+                           target="_blank">
                             <svg id="icon-globe" class="h-8 fill-current inline" xmlns="http://www.w3.org/2000/svg"
                                  viewBox="0 0 24 24">
                                 <g class="globe1">
@@ -151,7 +152,9 @@
 
                     <hr class="my-8"/>
 
-                    <iframe :src="`https://docs.google.com/forms/d/e/1FAIpQLSdYrhG0zpeJSRNspx5VtADbYb0gy2hNv2ipqYWTVbZ3TnhjZw/viewform?embedded=true&usp=pp_url&entry.1922543100=${source.coupon}`" class="w-full" height="640" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
+                    <iframe :src="`https://docs.google.com/forms/d/e/1FAIpQLSdYrhG0zpeJSRNspx5VtADbYb0gy2hNv2ipqYWTVbZ3TnhjZw/viewform?embedded=true&usp=pp_url&entry.1922543100=${source.coupon}`"
+                            class="w-full" height="640" frameborder="0" marginheight="0" marginwidth="0">載入中…
+                    </iframe>
                 </div>
             </div>
         </div>
