improve fucking layout

--- a/sales.html
+++ b/sales.html
@@ -125,7 +125,7 @@
                     </h3>
                     <p class="text-gray-700 text-2xl mb-8 text-center">
                         恭喜你獲得 2022 Web開發挑戰營
-                        <span class="text-2xl text-red-500 rounded-2xl inline bg-yellow-100 p-2">{{ source.sales}}</span>
+                        <span class="text-2xl text-red-500 rounded-2xl inline-block bg-yellow-100 p-2">{{ source.sales}}</span>
                         優惠
                     </p>
                     <p class="text-gray-600 text-md pl-8">
