--- a/index.html
+++ b/index.html
@@ -416,14 +416,14 @@
                         正規報名
                     </div>
                     <ul class="w-full text-center text-sm">
-                        <li class="border-b py-4 font-bold">6/1 報名截止</li>
+                        <li class="border-b py-4 font-bold">6/30 報名截止</li>
                         <li class="border-b py-4">一個專屬於你的網站</li>
                         <li class="border-b py-4">精美的營隊研習證明</li>
                     </ul>
                 </div>
                 <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
                     <div class="w-full pt-6 text-3xl text-gray-600 font-bold text-center">
-                        NT$ 8000
+                        NT$ 9999
                         <span class="text-base">/ 每人</span>
                     </div>
                     <div class="flex items-center justify-center">
@@ -438,7 +438,7 @@
                     <div class="w-full p-8 text-3xl font-bold text-center">早鳥報名</div>
                     <div class="h-1 w-full gradient my-0 py-0 rounded-t"></div>
                     <ul class="w-full text-center text-base">
-                        <li class="border-b py-4 font-bold text-red-400">限時優惠!! 只到4/30</li>
+                        <li class="border-b py-4 font-bold text-red-400">限時優惠!! 只到5/31</li>
                         <li class="border-b py-4">一個專屬於你的網站</li>
                         <li class="border-b py-4">精美的營隊研習證明</li>
                         <li class="border-b py-4">✨精美小禮</li>
@@ -446,7 +446,7 @@
                 </div>
                 <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
                     <div class="w-full pt-6 text-4xl font-bold text-center">
-                        NT$ 5000
+                        NT$ 6000
                         <span class="text-base">/ 每人</span>
                     </div>
                     <div class="flex items-center justify-center">
@@ -469,7 +469,7 @@
                 </div>
                 <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
                     <div class="w-full pt-6 text-3xl text-gray-600 font-bold text-center">
-                        NT$ 4000
+                        NT$ 4999
                         <span class="text-base">/ 每人</span>
                     </div>
                     <div class="flex items-center justify-center">
@@ -485,6 +485,7 @@
                 ▶ 查看其他方案
             </div>
         </div>
+        <!--
         <div class="flex flex-col w-5/6 mx-auto mb-3" id="online_course">
             <div class="flex-1 bg-white text-gray-600 rounded-t overflow-hidden shadow">
                 <div class="p-4 text-3xl font-bold text-center border-b-4">
@@ -505,7 +506,7 @@
                     </button>
                 </div>
             </div>
-        </div>
+        </div>-->
         <div class="flex flex-col w-5/6 mx-auto" id="inclass_sales">
             <div class="flex-1 bg-white text-gray-600 rounded-t overflow-hidden shadow">
                 <div class="p-4 text-3xl font-bold text-center border-b-4">
@@ -517,7 +518,7 @@
             </div>
             <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6 pb-1">
                 <div class="w-full pt-1 text-3xl text-gray-600 font-bold text-center">
-                    NT$ 3000
+                    NT$ 4000
                     <span class="text-base">/ 每人</span>
                 </div>
                 <div class="flex items-center justify-center">
