--- a/terms.html
+++ b/terms.html
@@ -125,7 +125,8 @@
                         2022 Web開發挑戰營共三梯次
                         <br/>
                         各梯次教學內容不會有過多差異，但實作專案會不同，學生也可報名多個梯次來增加自己的作品。<br/>
-                        報名兩個梯次以上者，報名之第二個梯次起可享有7折優惠!
+                        報名兩個梯次以上者，報名之第二個梯次起可享有7折優惠!<br/>
+                        若因不可抗力之因素，主辦單位有權更改上課日期!
                     </p>
                     <ul class="text-gray-600 pl-8 mb-4">
                         <li class="list-decimal ml-12">
@@ -135,7 +136,7 @@
                             7/4 - 7/6 共三天
                         </li>
                         <li class="list-decimal ml-12">
-                            7/9 - 7/12 共三天
+                            7/9 - 7/11 共三天
                         </li>
                     </ul>
                 </div>
