--- a/index.html
+++ b/index.html
@@ -507,6 +507,27 @@
                 </div>
             </div>
         </div>-->
+        <div class="flex flex-col w-5/6 mx-auto" id="bi_group_sales">
+            <div class="flex-1 bg-white text-gray-600 rounded-t overflow-hidden shadow">
+                <div class="p-4 text-3xl font-bold text-center border-b-4">
+                    雙人團報
+                </div>
+                <ul class="w-full text-center text-sm">
+                    <li class="border-b py-4">兩人一起報名</li>
+                </ul>
+            </div>
+            <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6 pb-1">
+                <div class="w-full pt-1 text-3xl text-gray-600 font-bold text-center">
+                    NT$ 5500
+                    <span class="text-base">/ 每人</span>
+                </div>
+                <div class="flex items-center justify-center">
+                    <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                        填寫報名表
+                    </button>
+                </div>
+            </div>
+        </div>
         <div class="flex flex-col w-5/6 mx-auto" id="inclass_sales">
             <div class="flex-1 bg-white text-gray-600 rounded-t overflow-hidden shadow">
                 <div class="p-4 text-3xl font-bold text-center border-b-4">
