--- a/sales.html
+++ b/sales.html
@@ -152,7 +152,7 @@
 
                     <hr class="my-8"/>
 
-                    <iframe :src="`https://docs.google.com/forms/d/e/1FAIpQLSdYrhG0zpeJSRNspx5VtADbYb0gy2hNv2ipqYWTVbZ3TnhjZw/viewform?embedded=true&usp=pp_url&entry.1922543100=${source.coupon}`"
+                    <iframe :src="`https://docs.google.com/forms/d/e/1FAIpQLSeMtzvvbB4KDmEoYjaKh7QfqEE-eNWylWix5GxPf8pf6I4GIw/viewform?embedded=true&usp=pp_url&entry.1199805853=其他優惠&entry.1578404361=${source.coupon}_${source.sales}`"
                             class="w-full" height="640" frameborder="0" marginheight="0" marginwidth="0">載入中…
                     </iframe>
                 </div>
