--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
+    <meta property="og:url"                content="https://aplusplus.education" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="Web開發挑戰營 | A++程式設計" />
+    <meta property="og:description"        content="這個暑假，讓您的孩子贏在起跑點！學習如何架設網站、製作學習歷程，營隊後除了可以獲得精美證書，還可以把一個自己做的網站帶回家，同時在營隊中也會教授獨家的學習歷程製作方法，這個暑假最棒的營隊 Web開發挑戰營" />
+    <meta property="og:image"              content="/img/banner.png" />
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
