--- a/sales.html
+++ b/sales.html
@@ -162,6 +162,23 @@
                         優惠後價格為: 新台幣${{ source.price }}元 / 人
                     </p>
 
+                    <p class="text-gray-600 text-md pl-8 text-center">如果無法載入表單，可直接透過連結前往
+                    </p>
+                    <div class="w-full text-center mb-3">
+                        <a class="text-pink-600 no-underline font-bold text-2xl inline-block border-2 p-2 my-2 rounded-xl shadow-xl"
+                           :href="`https://docs.google.com/forms/d/e/1FAIpQLSeMtzvvbB4KDmEoYjaKh7QfqEE-eNWylWix5GxPf8pf6I4GIw/viewform?embedded=true&usp=pp_url&entry.1199805853=其他優惠&entry.1189785392=${source.price}&entry.1578404361=${source.coupon}_${source.sales}`"
+                           target="_blank">
+                            <svg id="icon-globe" class="h-8 fill-current inline" xmlns="http://www.w3.org/2000/svg"
+                                 viewBox="0 0 24 24">
+                                <g class="globe1">
+                                    <path fill="none" d="M0 0h24v24H0z"></path>
+                                    <path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-2.29-2.333A17.9 17.9 0 0 1 8.027 13H4.062a8.008 8.008 0 0 0 5.648 6.667zM10.03 13c.151 2.439.848 4.73 1.97 6.752A15.905 15.905 0 0 0 13.97 13h-3.94zm9.908 0h-3.965a17.9 17.9 0 0 1-1.683 6.667A8.008 8.008 0 0 0 19.938 13zM4.062 11h3.965A17.9 17.9 0 0 1 9.71 4.333 8.008 8.008 0 0 0 4.062 11zm5.969 0h3.938A15.905 15.905 0 0 0 12 4.248 15.905 15.905 0 0 0 10.03 11zm4.259-6.667A17.9 17.9 0 0 1 15.973 11h3.965a8.008 8.008 0 0 0-5.648-6.667z"></path>
+                                </g>
+                            </svg>
+                            報名表單
+                        </a>
+                    </div>
+
                     <iframe :src="`https://docs.google.com/forms/d/e/1FAIpQLSeMtzvvbB4KDmEoYjaKh7QfqEE-eNWylWix5GxPf8pf6I4GIw/viewform?embedded=true&usp=pp_url&entry.1199805853=其他優惠&entry.1189785392=${source.price}&entry.1578404361=${source.coupon}_${source.sales}`"
                             class="w-full" height="1400" frameborder="0" marginheight="0" marginwidth="0">載入中…
                     </iframe>
