--- a/index.html
+++ b/index.html
@@ -432,9 +432,10 @@
                         <span class="text-base">/ 每人</span>
                     </div>
                     <div class="flex items-center justify-center">
-                        <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeMtzvvbB4KDmEoYjaKh7QfqEE-eNWylWix5GxPf8pf6I4GIw/viewform?embedded=true&usp=pp_url"
+                                class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                             填寫報名表
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -455,9 +456,10 @@
                         <span class="text-base">/ 每人</span>
                     </div>
                     <div class="flex items-center justify-center">
-                        <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeMtzvvbB4KDmEoYjaKh7QfqEE-eNWylWix5GxPf8pf6I4GIw/viewform?embedded=true&usp=pp_url"
+                           class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                             填寫報名表
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -478,9 +480,10 @@
                         <span class="text-base">/ 每人</span>
                     </div>
                     <div class="flex items-center justify-center">
-                        <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeMtzvvbB4KDmEoYjaKh7QfqEE-eNWylWix5GxPf8pf6I4GIw/viewform?embedded=true&usp=pp_url"
+                                class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                             填寫報名表
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -527,9 +530,10 @@
                     <span class="text-base">/ 每人</span>
                 </div>
                 <div class="flex items-center justify-center">
-                    <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                    <a  href="https://docs.google.com/forms/d/e/1FAIpQLSeMtzvvbB4KDmEoYjaKh7QfqEE-eNWylWix5GxPf8pf6I4GIw/viewform?embedded=true&usp=pp_url"
+                            class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                         填寫報名表
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -548,9 +552,10 @@
                     <span class="text-base">/ 每人</span>
                 </div>
                 <div class="flex items-center justify-center">
-                    <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeMtzvvbB4KDmEoYjaKh7QfqEE-eNWylWix5GxPf8pf6I4GIw/viewform?embedded=true&usp=pp_url"
+                            class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                         填寫報名表
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -598,9 +603,10 @@
         不要錯過你任何一個暑假<br/>
         把握這個贏在起跑點的機會
     </h3>
-    <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeMtzvvbB4KDmEoYjaKh7QfqEE-eNWylWix5GxPf8pf6I4GIw/viewform?embedded=true&usp=pp_url"
+            class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
         現在報名!
-    </button>
+    </a>
 </section>
 <!--Footer-->
 <footer class="bg-white">
