--- a/sales.html
+++ b/sales.html
@@ -235,6 +235,14 @@
             requirement: '台南一中學生證',
             coupon: 'TNFSH_SUMMER'
         },
+        'tngs': {
+            name: "台南女中",
+            personCall: '同學',
+            sales: '7折',
+            price: '4200',
+            requirement: '台南女中學生證',
+            coupon: 'TNGS_SUMMER'
+        },
         'ccsh': {
             name: "家齊高中",
             personCall: '同學',
