線上沒飯吃

--- a/terms.html
+++ b/terms.html
@@ -150,9 +150,10 @@
                         §2 用餐
                     </h3>
                     <p class="text-gray-600 mb-8 pl-8">
-                        不論哪個報名方案，費用皆包括三天的午餐及第一天第二天晚餐費。
+                        <!--不論哪個報名方案，費用皆包括三天的午餐及第一天第二天晚餐費。
                         <br/>
-                        用餐請在講師或隊輔許可用餐處食用
+                        用餐請在講師或隊輔許可用餐處食用-->
+                        因應疫情改為線上恕不提供用餐
                     </p>
                 </div>
                 <div class="align-middle">
