更正營隊資訊

--- a/terms.html
+++ b/terms.html
@@ -135,13 +135,13 @@
                     </p>
                     <ul class="text-gray-600 pl-8 mb-4">
                         <li class="list-decimal ml-12">
-                            7/1 - 7/3 共三天
+                            7/1 (五) - 7/3 (日) 共三天
                         </li>
-                        <li class="list-decimal ml-12">
+                        <!--<li class="list-decimal ml-12">
                             7/4 - 7/6 共三天
-                        </li>
+                        </li>-->
                         <li class="list-decimal ml-12">
-                            7/9 - 7/11 共三天
+                            7/9 (六) - 7/11 (一) 共三天
                         </li>
                     </ul>
                 </div>
