--- a/sales.html
+++ b/sales.html
@@ -243,6 +243,14 @@
             requirement: '台南女中學生證',
             coupon: 'TNGS_SUMMER'
         },
+        'fg': {
+            name: "北一女",
+            personCall: '同學',
+            sales: '7折',
+            price: '4200',
+            requirement: '北一女學生證',
+            coupon: 'FG_SUMMER'
+        },
         'ccsh': {
             name: "家齊高中",
             personCall: '同學',
