--- a/sales.html
+++ b/sales.html
@@ -251,6 +251,14 @@
             requirement: '北一女學生證',
             coupon: 'FG_SUMMER'
         },
+        'csgsh': {
+            name: "中山女高",
+            personCall: '同學',
+            sales: '8折',
+            price: '4800',
+            requirement: '中山女高學生證',
+            coupon: 'CSGSH_SUMMER'
+        },
         'ccsh': {
             name: "家齊高中",
             personCall: '同學',
