--- a/index.html
+++ b/index.html
@@ -441,10 +441,10 @@
             </div>
             <div class="flex flex-col w-5/6 lg:w-1/3 mx-auto lg:mx-0 rounded-lg bg-white mt-4 sm:-mt-6 shadow-lg z-10">
                 <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
-                    <div class="w-full p-8 text-3xl font-bold text-center">早鳥報名</div>
+                    <div class="w-full p-8 text-3xl font-bold text-center">最後優惠</div>
                     <div class="h-1 w-full gradient my-0 py-0 rounded-t"></div>
                     <ul class="w-full text-center text-base">
-                        <li class="border-b py-4 font-bold text-red-400">限時優惠!! 只到5/31</li>
+                        <li class="border-b py-4 font-bold text-red-400">恢復原價前最後優惠!! 僅限10組</li>
                         <li class="border-b py-4">一個專屬於你的網站</li>
                         <li class="border-b py-4">精美的營隊研習證明</li>
                         <li class="border-b py-4">✨精美小禮</li>
@@ -452,7 +452,7 @@
                 </div>
                 <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
                     <div class="w-full pt-6 text-4xl font-bold text-center">
-                        NT$ 6000
+                        NT$ 7000
                         <span class="text-base">/ 每人</span>
                     </div>
                     <div class="flex items-center justify-center">
@@ -476,7 +476,7 @@
                 </div>
                 <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
                     <div class="w-full pt-6 text-3xl text-gray-600 font-bold text-center">
-                        NT$ 4999
+                        NT$ 5999
                         <span class="text-base">/ 每人</span>
                     </div>
                     <div class="flex items-center justify-center">
@@ -526,7 +526,7 @@
             </div>
             <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6 pb-1">
                 <div class="w-full pt-1 text-3xl text-gray-600 font-bold text-center">
-                    NT$ 5500
+                    NT$ 6500
                     <span class="text-base">/ 每人</span>
                 </div>
                 <div class="flex items-center justify-center">
@@ -548,7 +548,7 @@
             </div>
             <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6 pb-1">
                 <div class="w-full pt-1 text-3xl text-gray-600 font-bold text-center">
-                    NT$ 4000
+                    NT$ 5000
                     <span class="text-base">/ 每人</span>
                 </div>
                 <div class="flex items-center justify-center">
