--- a/terms.html
+++ b/terms.html
@@ -127,7 +127,7 @@
                         §1 營期
                     </h3>
                     <p class="text-gray-600 pl-8">
-                        2022 Web開發挑戰營共一梯次
+                        2022 Web開發挑戰營梯次如下
                         <br/>
                         各梯次教學內容不會有過多差異，但實作專案會不同，學生也可報名多個梯次來增加自己的作品。<br/>
                         報名兩個梯次以上者，報名之第二個梯次起可享有7折優惠!<br/>
@@ -137,10 +137,10 @@
                         <li class="list-decimal ml-12">
                             7/1 (五) - 7/3 (日) 共三天
                         </li>
-                        <!--<li class="list-decimal ml-12">
+                        <li class="list-decimal ml-12">
                             7/4 - 7/6 共三天
                         </li>
-                        <li class="list-decimal ml-12">
+                        <!--<li class="list-decimal ml-12">
                             7/9 (六) - 7/11 (一) 共三天
                         </li>-->
                     </ul>
