--- a/terms.html
+++ b/terms.html
@@ -62,9 +62,21 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MQX3M4Z');</script>
+    <!-- End Google Tag Manager -->
 </head>
 <body class="leading-normal tracking-normal text-white gradient"
       style="/*font-family: 'Source Sans Pro', sans-serif;*/">
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MQX3M4Z"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!--Nav-->
 <nav id="header" class="fixed w-full z-30 top-0 text-white gradient">
     <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
